edited sample templates

--- a/css_template.css
+++ b/css_template.css
@@ -1,1 +1,8 @@
 /* Edit this template as you wish */
+
+body {
+    background-color: rgb(126, 194, 221);
+  }
+.center {
+    text-align: center;
+}
