--- a/css_template.css
+++ b/css_template.css
@@ -14,8 +14,7 @@ body {
   background-color: rgba(255,255,255, 0.90);
   padding: 20px;
   margin: 50px;
-  border-style: solid;
-  border-color: rgb(146, 160, 154);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
   text-align: center;
 }
@@ -36,14 +35,13 @@ body {
   background-color: rgba(255,255,255, 0.90);
   padding: 30px;
   margin: 50px;
-  border-style: solid;
-  border-color: rgb(146, 160, 154);
   border-radius: 10px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 }
 
 .box h2{
-  border-bottom: 1px solid;
+  
   font-size: 175%;
 }
 
@@ -67,8 +65,7 @@ body {
   background-color: rgba(255,255,255, 0.90);
   padding: 10px;
   margin: 50px;
-  border-style: solid;
-  border-color: rgb(146, 160, 154);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
   text-align: center;
 }
