--- a/css_template.css
+++ b/css_template.css
@@ -11,6 +11,7 @@ body {
 
   /* This is the box were tthe "Welcome" is displayed */
 .header {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgba(255,255,255, 0.90);
   padding: 20px;
   margin: 50px;
@@ -21,13 +22,45 @@ body {
 
 /* This is for the text inside the header */
 .header h1{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 200%;
+  font-style: italic;
+  font-variant: small-caps;
 }
 
 .header p{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 125%;
+}
+
+.header a:link{
+  text-decoration: none;
+  color: black;
+}
+
+.header a:hover {
+  text-decoration: none;
+}
+
+.header a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
+  text-decoration: none;
+  color: black;
 }
 
 /* This is for the box for the main content */
@@ -46,7 +79,6 @@ body {
 }
 
 .box p{
-  text-align: center;
   font-size: 120%;
 }
 
